fix(api): fix access token authentication
